@@ -1803,5 +1803,6 @@ $_LANG['Note content:'] = 'Treść notatki:';
 $_LANG['Resolve ticket:'] = 'Rozwiąż zgłoszenie:';
 $_LANG['Adds customer basic informations on ticket view and in notifications. Default: true'] = 'Dodaje podstawowe informacje o kliencie w widoku zgłoszenia oraz w powiadomieniach. Domyślnie: włączona';
 $_LANG['Set Message'] = 'Ustaw wiadomość';
+$_LANG['not in debt'] = 'nie zadłużeni';
 
 ?>
