@@ -27,6 +27,7 @@ version ? (????-??-??):
   - fixed 'big_networks' option testing (alec)
   - now we can set message for customers listed in Customer Search Results
     list (alec)
+  - mailing: added 'not in debt' customers filter (alec)
 
 version 1.9.6 Belos (2007-02-16):
 
